--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,8 @@
 display: flex;
   justify-content: space-between;
   min-width: 300px;
-  padding-right: 60px
+  margin: 0px 60px;
+  flex: 2;
 }
 
 header h1{
@@ -26,4 +27,20 @@ header h1{
     padding-left: 100px;
     font-size: 50px;
     color: black;
+}
+.banner{
+  width: 100%;
+  height: 200px;
+}
+.banner img{
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+
+}
+
+.head{
+  position:absolute;
+  top: 200px;
+  right: 50px;
 }
