--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,4 +46,46 @@ header h1{
 }
 .container{
   display: flex;
+
+  
+}
+.container img{
+  width: 100%;
+}
+
+.card{
+  
+  border-style: solid;
+  border-width: 1px;
+  padding: 10px;
+  width: 400px;
+  flex-basis: 400px;
+
+
+}
+.main-card{
+  border-style: solid;
+  border-width: 1px;
+  padding: 10px;
+  width: 600px;
+
+
+}
+
+.container2{
+  display:flex;
+}
+.container2 img{
+  width: 100%;
+}
+
+.box{
+ width: 100%;
+ display: flex;
+ flex-wrap: wrap;
+}
+.box img{
+  width:100%;
+  height:100px;
+  object-fit:cover;
 }
