--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,12 +54,12 @@ header h1{
 }
 
 .card{
-  
+  flex: 0 0 50%;
   border-style: solid;
   border-width: 1px;
   padding: 10px;
   width: 400px;
-  flex-basis: 400px;
+
 
 
 }
@@ -78,14 +78,31 @@ header h1{
 .container2 img{
   width: 100%;
 }
-
+.sub{
+  flex: 0 0 25%;
+  /* width: 50%; */
+}
 .box{
  width: 100%;
  display: flex;
  flex-wrap: wrap;
+ justify-content: centre;
+ flex: 0 0 75%;
+
 }
 .box img{
   width:100%;
-  height:100px;
   object-fit:cover;
+}
+.build img{
+  border-style: solid;
+}
+.footer{
+ 
+  display: flex;
+  justify-content: space-around;
+  align-items:flex-end;
+}
+.contact{
+  flex: 1;
 }
