--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,108 +1,40 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    padding: 5px;
-    background-color: #13293d;
-    color: #fff;
-    min-width: 100px;
-  
-}
-.nav-links{
-display: flex;
-  justify-content: space-between;
-  min-width: 300px;
-  margin: 0px 60px;
-  flex: 2;
+*{
+  box-sizing: border-box;
+  margin: 0;
 }
 
-header h1{
-    background-color: aqua;
-    padding-left: 100px;
-    font-size: 50px;
-    color: black;
-}
-.banner{
-  width: 100%;
-  height: 200px;
-}
-.banner img{
-  width: 100%;
-  max-height: 100%;
-  object-fit: cover;
 
+.header { 
+top: 0;
+width: 100%;
+height: 61px;
+background-color:#5e5c59;
 }
 
-.head{
-  position:absolute;
-  top: 200px;
-  right: 50px;
-}
-.container{
-  display: flex;
-
-  
-}
-.container img{
-  width: 100%;
-}
-
-.card{
-  flex: 0 0 50%;
-  border-style: solid;
-  border-width: 1px;
-  padding: 10px;
-  width: 400px;
-
-
-
-}
-.main-card{
-  border-style: solid;
-  border-width: 1px;
-  padding: 10px;
-  width: 600px;
-
-
-}
-
-.container2{
-  display:flex;
-}
-.container2 img{
-  width: 100%;
-}
-.sub{
-  flex: 0 0 25%;
-  /* width: 50%; */
-}
-.box{
- width: 100%;
+.nav-container {
  display: flex;
- flex-wrap: wrap;
- justify-content: centre;
- flex: 0 0 75%;
+ flex-direction: row;
+ justify-content:flex-end;
+ align-items: center;
+}
+
+.nav-links-container {
+ display: flex;
 
 }
-.box img{
-  width:100%;
-  object-fit:cover;
+
+.nav-link {
+ margin: 1.6rem;
 }
-.build img{
-  border-style: solid;
+
+.nav-link a {
+ text-decoration: none;
+ font-size: 20px;
+ color: white;
+ font-family: songster, sans-serif;
 }
-.footer{
- 
-  display: flex;
-  justify-content: space-around;
-  align-items:flex-end;
-}
-.contact{
-  flex: 1;
+
+
+.nav-link a:hover {
+ color: blue;
 }
