--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,60 @@ p{
   display: flex;
 }
 
+.container{
+
+  display: flex;
+  margin-top: 30PX;
+}
+
+h1{
+   font-family: songster, sans-serif;
+   color: white;
+   text-align: center;
+   font-size: 100px;
+   font-weight: 100;
+}
+.child1{
+   width: 20%;
+   border-right: 3px solid red;
+}
+.child1 h2{
+  color: black;
+  text-align: center;
+  font-family: songster, sans-serif; 
+}
+
+.child2{
+   width: 80%;
+}
+
+.gall{
+  width: 80%;
+  background-image: url("../assets/images/blue.jpg");
+  object-fit: cover;
+  height:400px;
+  margin-right: 20px;
+  border: 10px solid red;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  position: relative;
+}
+
+.text{
+  position: absolute;
+  color: black;
+  top: 0;
+  background-color: bisque;
+  font-family: songster, sans-serif;
+}
+
+.apps{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  
+  margin-left: 250px;
+  margin-top: 30px;
+}
+
