--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,4 +116,27 @@ h1{
   margin-left: 250px;
   margin-top: 30px;
 }
+.pic2{
+  object-fit: cover;
+  width: 300px;
+  border: 10px solid red;
+  position: relative;
+}
+.pic3{
+  width: 100%;
+  height: 380px;
+  object-fit: cover;
+}
+.cards{
+
+ position: relative;
+
+}
+.text2{
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  background-color: beige;
+  font-family: songster, sans-serif;
+}
 
