--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ li{
 
 @font-face {
   font-family: 'songster';
-  src: url(../my-portfolio/assets/fonts/Aur.otf);
+  src: url(https://github.com/XBaderM/my-portfolio/blob/main/assets/fonts/Aur.otf);
 }
 
 /* mobile size */
