--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,8 @@ background-color:#5e5c59;
 }
 
 p{
-  font-size: 23px;
+  font-size: 16px;
+  line-height: 1.5;
   text-align: center;
   font-family: songster, sans-serif;
 }
